Extension client listens for pushups and enables page after 10 pushups

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -7,7 +7,8 @@
     "content_scripts": [
       {
         "matches": ["https://*/*", "http://*/*"],
-        "js": ["content.js"],
+        "js": ["socket.io.js",
+               "content.js"],
         "run_at": "document_end"
       }
     ],
